solve issue with name on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@ body {
   font-family: 'Staatliches', cursive;
 }
 
+.name {
+  text-align: center;
+}
+
 #main-header img {
   width: 100%;
   height: 100%;
